# BoostSnippets

./: CMakeLists.txt  InputArguments.cpp  README.md  any.cpp  optional.cpp  variant.cpp
Casts/: CMakeLists.txt  lexicalCast.cpp  numericCast.cpp  polymorphicCast.cpp
Parsers/: CMakeLists.txt  ParserStart.cpp  SimpleParser.cpp  SimpleParser.h
